[新增]Tag組件(Tag,標籤共用色)

--- a/assets/scss/utils/variable.scss
+++ b/assets/scss/utils/variable.scss
@@ -27,3 +27,15 @@ $transparent-gainsboro: rgba(220, 220, 220, 0.7);
 $transparent-white: rgba(255, 255, 255, 0);
 $white: rgba(255, 255, 255, 1);
 $word-black: rgba(73, 73, 73, 1);
+
+//標籤色碼
+$tag-bg-green:rgba(226, 250, 228, 1);
+$tag-border-green:rgba(146, 224, 177, 1);
+$tag-color-green:rgba(29, 182, 90, 1);
+$tag-border-red:rgba(255, 171, 171, 1);
+$tag-color-red:rgba(220, 105, 105, 1);
+$tag-bg-yellow:rgba(255, 245, 224, 1);
+$tag-border-yellow:rgba(254, 210, 140, 1);
+$tag-color-yellow:rgba(222, 167, 79, 1);
+$tag-bg-gray:rgba(240, 240, 240, 1);
+$tag-border-gray:rgba(209, 209, 209, 1);
