--- a/assets/scss/input.scss
+++ b/assets/scss/input.scss
@@ -60,6 +60,10 @@
         font-size: 16px;
         font-weight: bold;
     }
+    &:disabled{
+        background: #DBE4E2;
+        border-radius: 5px;
+    }
 }
 .dropdown {
     display: flex;
