[修改]NavTabs / SwitchTabs組件

--- a/assets/scss/utils/navtabs.scss
+++ b/assets/scss/utils/navtabs.scss
@@ -3,7 +3,7 @@
 .navtabs__header {
   // border: 1px solid red;
   display: flex;
-  width: 352px;
+  // width: 352px;
   height: 32px;
   padding: 10px 0;
 }
