--- a/assets/scss/utils/buttons.scss
+++ b/assets/scss/utils/buttons.scss
@@ -27,7 +27,8 @@
   padding: 6px 15px;
   display: flex;
   align-items: flex-start;
-  width: 32px;
+  justify-content: center;
+  // width: 32px;
   cursor: pointer;
 
   .button-text {
@@ -48,7 +49,8 @@
   padding: 6px 15px;
   display: flex;
   align-items: flex-start;
-  width: 32px;
+  justify-content: center;
+  // width: 32px;
   opacity: 0.5;
   cursor: default;
 
@@ -65,7 +67,8 @@
   padding: 6px 15px;
   display: flex;
   align-items: flex-start;
-  width: 32px;
+  justify-content: center;
+  // width: 32px;
   cursor: pointer;
 
   .button-text {
@@ -86,6 +89,7 @@
   padding: 6px 15px;
   display: flex;
   align-items: flex-start;
+  justify-content: center;
   opacity: 0.5;
   cursor: default;
 
@@ -101,6 +105,7 @@
   padding: 6px 0;
   display: flex;
   align-items: flex-start;
+  justify-content: center;
   cursor: pointer;
 
   .button-text {
@@ -120,6 +125,7 @@
   padding: 6px 0;
   display: flex;
   align-items: flex-start;
+  justify-content: center;
   opacity: 0.5;
   cursor: default;
 
@@ -137,7 +143,8 @@
   padding: 6px 15px;
   display: flex;
   align-items: flex-start;
-  width: 32px;
+  justify-content: center;
+  // width: 32px;
   cursor: pointer;
 
   .button-text {
@@ -157,7 +164,8 @@
   padding: 6px 15px;
   display: flex;
   align-items: flex-start;
-  width: 32px;
+  justify-content: center;
+  // width: 32px;
   opacity: 0.5;
   cursor: default;
 
