[修改]共用sizing參數(變數名調整,位置改動)

--- a/assets/scss/utils/variable.scss
+++ b/assets/scss/utils/variable.scss
@@ -39,3 +39,31 @@ $tag-border-yellow:rgba(254, 210, 140, 1);
 $tag-color-yellow:rgba(222, 167, 79, 1);
 $tag-bg-gray:rgba(240, 240, 240, 1);
 $tag-border-gray:rgba(209, 209, 209, 1);
+
+//共用寬度%
+$w-100:100%;
+$w-90:90%;
+$w-80:80%;
+$w-75:75%;
+$w-70:70%;
+$w-60:60%;
+$w-50:50%;
+$w-40:40%;
+$w-30:30%;
+$w-25:25%;
+$w-20:20%;
+$w-10:10%;
+
+//共用寬度vw
+$vw-100:100vw;
+$vw-90:90vw;
+$vw-80:80vw;
+$vw-75:75vw;
+$vw-70:70vw;
+$vw-60:60vw;
+$vw-50:50vw;
+$vw-40:40vw;
+$vw-30:30vw;
+$vw-25:25vw;
+$vw-20:20vw;
+$vw-10:10vw;
