[修改] TextArea(加入TextArea,共用高度設定)

--- a/assets/scss/utils/variable.scss
+++ b/assets/scss/utils/variable.scss
@@ -67,3 +67,17 @@ $vw-30:30vw;
 $vw-25:25vw;
 $vw-20:20vw;
 $vw-10:10vw;
+
+//共用高度vh
+$vh-100:100vh;
+$vh-90:90vh;
+$vh-80:80vh;
+$vh-75:75vh;
+$vh-70:70vh;
+$vh-60:60vh;
+$vh-50:50vh;
+$vh-40:40vh;
+$vh-30:30vh;
+$vh-25:25vh;
+$vh-20:20vh;
+$vh-10:10vh;
