--- a/assets/scss/utils/sizing.scss
+++ b/assets/scss/utils/sizing.scss
@@ -74,6 +74,43 @@
     width: $vw-10;
 }
 
+.vh-100{
+    height: $vh-100;
+}
+.vh-90{
+    height: $vh-90;
+}
+.vh-80{
+    height: $vh-80;
+}
+.vh-75{
+    height: $vh-75;
+}
+.vh-70{
+    height: $vh-70;
+}
+.vh-60{
+    height: $vh-60;
+}
+.vh-50{
+    height: $vh-50;
+}
+.vh-40{
+    height: $vh-40;
+}
+.vh-30{
+    height: $vh-30;
+}
+.vh-25{
+    height: $vh-25;
+}
+.vh-20{
+    height: $vh-20;
+}
+.vh-10{
+    height: $vh-10;
+}
+
 
 
 
