[新增] scrollbar樣式 [修改] Header組件連結

--- a/assets/scss/utils/navtabs.scss
+++ b/assets/scss/utils/navtabs.scss
@@ -24,3 +24,25 @@
 .navtabs__content {
   padding: 0 20px;
 }
+
+// * ==========================================================================
+// * Scrollbar 的樣式
+// * ==========================================================================
+
+.theme_scrollbar {
+  &::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background-color: $white;
+  }
+
+  &::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+    background-color: $white;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #A1BFB8;
+  }
+}
