--- a/assets/scss/utils/navtabs.scss
+++ b/assets/scss/utils/navtabs.scss
@@ -46,3 +46,61 @@
     background-color: #A1BFB8;
   }
 }
+
+// * ==========================================================================
+// * Checkbox 的樣式
+// * ==========================================================================
+
+
+.theme_checkbox {
+  input {
+  position: absolute; // take it out of document flow
+  opacity: 0; // hide it
+
+    & + label {
+      position: relative;
+      cursor: pointer;
+      padding: 0;
+    }
+
+    // Box.
+    & + label::before {
+      content: '';
+      margin-right: 7px;
+      margin-bottom: -2px;
+      display: inline-block;
+      width: 13px;
+      height: 13px;
+      background: white;
+      border: 1px solid #959595;
+      border-radius: 3px;
+    }
+
+    // Box checked
+    &:checked + label::before {
+      content: '';
+      background: url('~/assets/img/checkbox.svg') no-repeat right/contain;
+      width: 15px;
+      height: 15px;
+      border: none;
+    }
+
+    &:disabled + label {
+      color: #b8b8b8;
+      cursor: auto;
+    }
+
+    &:disabled + label::before {
+      box-shadow: none;
+      background: #ddd;
+    }
+
+  }
+
+  label {
+    color: #494949;
+    display: flex;
+    align-items: center;
+    @include noto-sans-tc-16-regular;
+  }
+}
