[新增]Editcompensate(Editcompensate Page ,Requisition,AddLand,CheckInput組件 sizing)

--- a/assets/scss/utils/variable.scss
+++ b/assets/scss/utils/variable.scss
@@ -81,3 +81,11 @@ $vh-30:30vh;
 $vh-25:25vh;
 $vh-20:20vh;
 $vh-10:10vh;
+
+//RWD設定寬度
+$pcxl-media:1900px;
+$pcl-media:1680px;
+$pc-media:1440px;
+$pcm-media:1366px;
+$pcs-media:1152px;
+$pcxs-media:1024px;
