[修改] 版型調整

--- a/assets/scss/utils/sizing.scss
+++ b/assets/scss/utils/sizing.scss
@@ -116,8 +116,8 @@
 }
 
 .tg-75{
-    margin-left: 22.5vw !important;
-    width: $vw-75 !important;
+    margin-left: 360px !important;
+    width: calc( 100vw - 400px) !important;
 }
 
 .flexBox{
