[修改] 加入select 工具 (樣式修改)

--- a/assets/scss/plugins/modules/_spinner.scss
+++ b/assets/scss/plugins/modules/_spinner.scss
@@ -14,7 +14,7 @@
   transition: opacity .1s;
 }
 .vs__spinner,
-.vs__spinner:after {
+.vs__spinner::after {
   border-radius: 50%;
   width: 5em;
   height: 5em;
