--- a/assets/scss/plugins/global/_variables.scss
+++ b/assets/scss/plugins/global/_variables.scss
@@ -40,5 +40,5 @@ $vs-selected-border-width: $vs-border-width !default;
 $vs-dropdown-z-index: 1000 !default;
 $vs-dropdown-min-width: 160px !default;
 $vs-dropdown-max-height: 350px !default;
-$vs-dropdown-box-shadow: 0px 3px 6px 0px map_get($vs-colors, 'darkest') !default;
+$vs-dropdown-box-shadow: 0 3px 6px 0 map_get($vs-colors, 'darkest') !default;
 $vs-dropdown-bg: #fff !default;
