--- a/assets/scss/components/_map.scss
+++ b/assets/scss/components/_map.scss
@@ -1117,21 +1117,27 @@ input[type='checkbox']:checked::after {
 // Scalebar.css
 
 #ScaleTools {
-  position: absolute;
+  // position: absolute;
   width: 5.2cm;
   height: 28px;
   display: inline-block;
-  bottom: 14px;
-  left: 14px;
+  // bottom: 14px;
+  // left: 14px;
+  // background-color: white;
+  padding-left: 5px;
+  border: none;
 }
 
 .scalebar {
   width: 100%;
   height: 100%;
-  position: absolute;
+  // position: absolute;
+  position: relative;
+
+  .force { background-color: black; }
+  .back { background-color: white; }
 }
-.scalebar .force { background-color: black; }
-.scalebar .back { background-color: white; }
+
 
 .scalebar > .barImage {
   width: calc(100% - 2px);
