[新增]api呼叫共用/登入處理

--- a/assets/scss/components/_map.scss
+++ b/assets/scss/components/_map.scss
@@ -943,9 +943,9 @@ input[type='checkbox']:checked::after {
   background-color: #ccc;
 }
 
-.sgInfoWindow .even-attribute
+/* .sgInfoWindow .even-attribute
 {
-}
+} */
 
 .sgInfoWindow .attribute-name {
   font-weight: bold;
