[修改] 加入忘記密碼按鈕

--- a/assets/scss/utils/sizing.scss
+++ b/assets/scss/utils/sizing.scss
@@ -123,10 +123,10 @@
 .flexBox{
     width: $w-100;
     display: flex;
-    .flex-left{
+    &.flex-left{
         justify-content:flex-start !important;
     }
-    .flex-right{
+    &.flex-right{
         justify-content:flex-end !important;
     }
     .flex-1{
