[修改] 版型樣式調整

--- a/assets/scss/input.scss
+++ b/assets/scss/input.scss
@@ -66,7 +66,8 @@
 .inputType {
     background-color: $white;
     border-radius: 5px;
-    padding: 10px 9px;
+    padding: 8px 9px;
+    margin: 0 2.5px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -142,12 +143,12 @@
     }
     input[type="checkbox"] + label
     {
-      background: #999;
       height: 14px;
       width: 14px;
       display:inline-block;
       margin: 0 5px;
       cursor: pointer;
+      @include checkbox;
     }
     input[type="checkbox"]:checked + label
     {
