--- a/assets/scss/utils/mixin.scss
+++ b/assets/scss/utils/mixin.scss
@@ -102,14 +102,19 @@ $font-family: 'Noto Sans TC', sans-serif;
 
 @mixin scrollBar{
   overflow: auto;
-  &::-webkit-scrollbar{
-    width: 6px;
-    height: 6px;
+  &::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background-color: $white;
   }
-  &::-webkit-scrollbar-track{
-    background: #FFF;
+
+  &::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+    background-color: $white;
   }
-  &::-webkit-scrollbar-thumb{
-    background: #A1BFB8;
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #A1BFB8;
   }
 }
