--- a/assets/scss/utils/variable.scss
+++ b/assets/scss/utils/variable.scss
@@ -41,6 +41,7 @@ $tag-bg-gray:rgba(240, 240, 240, 1);
 $tag-border-gray:rgba(209, 209, 209, 1);
 
 //共用寬度%
+$w-310:310px;
 $w-100:100%;
 $w-90:90%;
 $w-80:80%;
