--- a/assets/scss/input.scss
+++ b/assets/scss/input.scss
@@ -119,6 +119,7 @@
     justify-content: center;
     align-self: stretch;
     margin: 3px 0;
+    position: relative;
     select{
         border-radius: 5px;
         align-items: center;
