[新增] 渠道查詢定位 [修改] map js更新

--- a/assets/scss/components/_map.scss
+++ b/assets/scss/components/_map.scss
@@ -7,6 +7,10 @@
   top: 0;
   left: 0;
   overflow: hidden;
+
+  text {
+    font-family: 'Noto Sans TC', sans-serif;
+  }
 }
 
 .sgContainer .hObject {
