[修改] 編輯停灌補償申請單 申請人資料欄位設定

--- a/assets/scss/input.scss
+++ b/assets/scss/input.scss
@@ -15,6 +15,7 @@
         position: absolute;
         background: #FFF;
         width: $w-90;
+        min-width: 180px;
         top: 36px;
         z-index: 1000;
         padding: 10px 5%;
@@ -35,6 +36,12 @@
                 line-height: 20px;
                 @include noto-sans-tc-16-regular;
             }
+        }
+        &.filterRight{
+            right: 0;
+        }
+        &.filterLeft{
+            left: 0;
         }
         &::-webkit-scrollbar{
             width: 6px;
