[新增] 系統使用量統計完成 / 首頁串接資料完成

--- a/assets/scss/components/_map.scss
+++ b/assets/scss/components/_map.scss
@@ -9,7 +9,8 @@
   overflow: hidden;
 
   text {
-    font-family: 'Noto Sans TC', sans-serif;
+    // font-family: 'Noto Sans TC Black', sans-serif;
+    font-weight: bold;
   }
 }
 
